# multi-modal-rag-system

./: README.md  pyproject.toml  render.yaml  requirements.txt
app/: app.py  data.py  embedding.py  main.py  vector_db.py
data/texts/: DL.txt  ML.txt  NN.txt
static/: index.html
